--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,12 @@
 # defaults file for bbaassssiiee.commoncentos
 
 yum_packages:
+   - libselinux-python
+   - libsemanage-python
    - python-httplib2
    - unzip
+   - ansible # so you can use it as a control host too
+   - acpid
 
 dns_nameserver: 8.8.8.8
+
