adding missing bits to prepare running the RHEL-STIG role after bbaassssiiee.commoncentos

--- a/tasks/base.yml
+++ b/tasks/base.yml
@@ -37,6 +37,7 @@
   with_items: yum_packages
 
 - name: 'set SELinux to permissive'
+  sudo: yes
   selinux: policy=targeted state=permissive
 
 - name: 'set hostname'
