--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,3 +6,6 @@
 
 - name: 'start acpid'
   service: name=acpid state=started
+
+- name: 'restart iptables'
+  service: name=iptables state=restarted
