--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,4 @@
 # Basic setup running in Vagrant
 - include: base.yml
 # Implement basic requirements for RHEL-STIG role to complete
-- include: stig.yml
+#- include: stig.yml
