--- a/tasks/stig.yml
+++ b/tasks/stig.yml
@@ -8,6 +8,7 @@
    - policycoreutils-python
    - iptables
    - aide
+   - screen
   
 - name: 'start synchronizing the system clock'
   service: name=ntpd state=started enabled=yes
@@ -106,6 +107,12 @@
 
 - name: 'ignore IPv4 ICMP redirect messages.'
   sysctl: name=net.ipv4.conf.default.accept_redirects value=0 state=present reload=yes ignoreerrors=yes
+
+- name: 'do not respond to ICMPv4 sent to a broadcast address.'
+  sysctl: name=net.ipv4.icmp_echo_ignore_broadcasts value=1 state=present reload=yes ignoreerrors=yes
+
+- name: 'ignore ICMPv4 bogus error responses.'
+  sysctl: name=net.ipv4.icmp_ignore_bogus_error_responses value=1 state=present reload=yes ignoreerrors=yes
 
 - name: 'disable TCP timestamp responses'
   sysctl: name=net.ipv4.tcp_timestamps value=0 state=present reload=yes ignoreerrors=yes
