--- a/tasks/stig.yml
+++ b/tasks/stig.yml
@@ -97,6 +97,9 @@
 - name: 'do not accept ICMPv4 redirect packets on any interface'
   sysctl: name=net.ipv4.conf.all.accept_redirects value=0 state=present reload=yes ignoreerrors=yes
 
+- name: 'IP forwarding for IPv4 must not be enabled, unless the system is a router.'
+  sysctl: name=net.ipv4.ip_forward value=0 state=present reload=yes ignoreerrors=yes
+
 - name: 'do not accept ICMPv4 secure redirect packets on any interface'
   sysctl: name=net.ipv4.conf.all.secure_redirects value=0 state=present reload=yes ignoreerrors=yes
 
