--- a/tasks/stig.yml
+++ b/tasks/stig.yml
@@ -4,12 +4,12 @@
 - name: 'add packages for security requirements'
   yum: name={{ item }} state=present
   with_items:
-   - ntp
-   - policycoreutils-python
-   - iptables
-   - aide
-   - openswan
-   - screen
+    - ntp
+    - policycoreutils-python
+    - iptables
+    - aide
+    - openswan
+    - screen
 
 - name: 'start synchronizing the system clock'
   service: name=ntpd state=started enabled=yes
@@ -19,13 +19,11 @@
 
 - name: 'build and write /etc/sysconfig/iptables file'
   template: src=etc-sysconfig-iptables.j2 dest=/etc/sysconfig/iptables owner=root group=root mode=0600 backup=no
-  notify:
-  - restart iptables
+  notify: restart iptables
 
 - name: 'build and write /etc/sysconfig/iptables-config file'
   template: src=etc-sysconfig-iptables-config.j2 dest=/etc/sysconfig/iptables-config owner=root group=root mode=0600 backup=yes
-  notify:
-  - restart iptables
+  notify: restart iptables
   tags:
     - config
 
