--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: Bas Meijer
-  description: Prepares a Centos box by Hashicorp for Virtualbox
+  description: Prepares a Centos6 box by Hashicorp for Virtualbox
   company:
   license: license (BSD, MIT)
   min_ansible_version: 1.8
@@ -41,7 +41,7 @@ galaxy_info:
   # Below are all categories currently available. Just as with
   # the platforms above, uncomment those that apply to your role.
   #
-  categories:
+  galaxy_tags:
     - development
     - packaging
     - system
